--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -156,5 +156,12 @@ $breakpoint-xl: 1200px;
         border-bottom: 0;
       }
     }
+
+    &.is-borderless {
+      td,
+      th {
+        border: 0;
+      }
+    }
   }
 }
