--- a/_sass/components/_components.scss
+++ b/_sass/components/_components.scss
@@ -3,8 +3,10 @@
 @import "breadcrumbs";
 @import "buttons";
 @import "character_spells";
+@import "details";
 @import "icon_progress";
 @import "menu";
 @import "spell_info_table";
 @import "spells";
 @import "tags";
+@import "weapons_list";
