--- a/_sass/components/_menu.scss
+++ b/_sass/components/_menu.scss
@@ -27,7 +27,7 @@
     margin-right: 0;
     padding-left: 0.75em;
     display: none;
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: $breakpoint-lg) {
       display: block;
     }
   }
