--- a/_sass/components/_spell_info_table.scss
+++ b/_sass/components/_spell_info_table.scss
@@ -2,11 +2,10 @@
   width: 100%;
   th,
   td {
-    &:first-child {
-      text-align: left;
-    }
-    &:last-child {
-      text-align: right;
-    }
+    text-align: left;
+  }
+
+  th {
+    width: 30%;
   }
 }
