--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -9,7 +9,7 @@
   font-weight: $headings-font-weight;
   font-size: 1rem;
 
-  @media screen and (min-width: $breakpoint-md) {
+  @media screen and (min-width: $breakpoint-lg) {
     max-width: 220px;
     flex: 0 0 220px;
     padding-right: 1rem;
