Add armor and saving throws

--- a/_includes/character_spells.html
+++ b/_includes/character_spells.html
@@ -18,11 +18,13 @@
   {% for spell in spells %}
     <details class="details">
       <summary>
-        <div class="arrow-icon">
-          <i class="fal fa-chevron-right"></i>
-        </div>
-        <div class="title">
-          {{spell.name}}
+        <div class="summary">
+          <div class="arrow-icon">
+            <i class="fal fa-chevron-right"></i>
+          </div>
+          <div class="title">
+            {{spell.name}}
+          </div>
         </div>
       </summary>
       <div style="margin-top: 0.125em;">
