--- a/_includes/character_spells.html
+++ b/_includes/character_spells.html
@@ -25,6 +25,9 @@
           <div class="title">
             {{spell.name}}
           </div>
+          <div style="text-align: right; flex-grow: 1">
+            <input type="checkbox">
+          </div>
         </div>
       </summary>
       <div style="margin-top: 0.125em;">
