--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>{{ page.title }} | Felvand</title>
+<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/assets/css/styles.css">
 <script src="https://kit.fontawesome.com/cb6e03f9d8.js" crossorigin="anonymous"></script>
 <script src="/assets/scripts/main.js"></script>
