--- a/_layouts/character.html
+++ b/_layouts/character.html
@@ -286,7 +286,10 @@ tabs:
 
     <div class="column narrower">
       <div class="article">
-        <h2>{{page.hit_point_max}}/{{page.hit_point_max}}</h2>
+        <h2>
+          HP
+          <input class="hp-input" value="{{page.hit_point_max}}">/{{page.hit_point_max}}
+        </h2>
 
         <div>
           <p class="h4">Hit dice</p>
