--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,11 +4,24 @@ layout: base
 
 {% assign menu_items = site.data.navigation.main.items %}
 
-<div class="main-layout">
-  <aside class="sidebar">
-    {% include menu.html items=menu_items %}
+<div class="flex w-full flex-wrap lg:flex-no-wrap lg:min-h-screen">
+  <aside id="sidebar" class="sidebar relative transition-transform transform duration-200 ease-in-out flex-none flex justify-end w-full text-base lg:text-sm xl:text-xs lg:w-56">
+    <div class="w-full lg:absolute p-6 lg:p-4 transition-opacity duration-300 ease-in-out lg:overflow-hidden">
+      {% include menu.html items=menu_items %}
+    </div>
+
+    <div class="absolute flex justify-center hidden lg:flex top-0 bottom-0">
+      <button
+        id="sidebar-toggle"
+        class="absolute block mt-8 leading-none w-8 h-8 flex items-center justify-center bg-white shadow-md hover:shadow-xs rounded-full z-10"
+      >
+        <span class="transform block rotate-0 transition-transform duration-300 ease-in-out">
+          <i class="block fas fa-angle-left"></i>
+        </span>
+      </button>
+    </div>
   </aside>
-  <main class="main">
+  <main class="w-full">
     {{content}}
   </main>
 </div>
