--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,5 @@
 <title>{{ page.title }} | Felvand</title>
 <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/assets/css/styles.css">
-<script src="https://kit.fontawesome.com/cb6e03f9d8.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="/assets/fontawesome/css/all.min.css">
 <script src="/assets/scripts/main.js"></script>
